--- a/HTML/Layout-Tags-And-Semantic-Tags/ex2.html
+++ b/HTML/Layout-Tags-And-Semantic-Tags/ex2.html
@@ -7,11 +7,11 @@
 <body>
 	<h3>Ordered List</h3>
 	<ol type ="1">
-		<li>AIML</li>
+		<li>ECT</li>
+		<li>ECE</li>
 		<li>CSE</li>
-		<li>CST</li>
 		<li>IT</li>
-		<li>MECH</li>
+		<li>EEE</li>
 	</ol>
 	<h3>Unordered List</h3>
 	<ul type ="circle">
