--- a/HTML/Layout-Tags-And-Semantic-Tags/ex1.html
+++ b/HTML/Layout-Tags-And-Semantic-Tags/ex1.html
@@ -5,17 +5,14 @@
 <title>Ex 1</title>
 </head>
 <body>
-	<!--<h1>D</h1>
-    <h2>e</h2>
-    <h3>e</h3>
-    <h4>p</h4>
-    <h5>a</h5>
-    <h6>k</h6>-->
-    <span style="font-size: 36px;">D</span>
-    <span style="font-size: 32px;">e</span>
-    <span style="font-size: 28px;">e</span>
-    <span style="font-size: 24px;">p</span>
-    <span style="font-size: 20px;">a</span>
-    <span style="font-size: 16px;">k</span>
+
+    <span style="font-size: 36px;">J</span>
+    <span style="font-size: 32px;">A</span>
+    <span style="font-size: 28px;">Y</span>
+    <span style="font-size: 24px;">A</span>
+    <span style="font-size: 20px;">N</span>
+    <span style="font-size: 16px;">T</span>
+    <span style="font-size: 16px;">H</span>
+    <span style="font-size: 16px;">I</span>
 </body>
 </html>
